plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.4'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'fr.makizart'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

repositories {
    mavenCentral()
}

dependencies {

    implementation "org.apache.commons:commons-lang3:3.12.0"
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.1.5'
    implementation "org.hibernate.orm:hibernate-core:6.2.7.Final"

    testImplementation platform('org.junit:junit-bom:5.9.2')
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.4.0'
    testImplementation 'com.h2database:h2:2.1.214'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.5'

    //Spring boot still use older snake yaml 1.33 which has vulnerability. This force the usage of a fixed version
    implementation "org.yaml:snakeyaml:2.0"

}

test {
    useJUnitPlatform()
}